<resources>
    <string name="app_name">Book Store v1</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Label for editor menu option to save a book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Add a book</string>

    <!-- Text hint for book title field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">Title</string>

    <!-- Text hint for book price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for book quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- hint for the book supplier name [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier</string>

    <!-- hint for the book supplier telephone number [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Supplier Telephone</string>
</resources>
